# cnst

./: .gitignore  README.md  pyproject.toml
src/cnst/: __init__.py  _cnst.py  _constants.json
